[project]
name = "agno-team"
version = "0.1.0"
description = "Minimal runnable example of an Agno multi-agent team (Gemini)"
readme = "README.md"
authors = [
    { name = "Kane Le", email = "kane.le@viact.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.12",
    "ddgs>=9.14.4",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.4.1",
]

[project.scripts]
agno-team = "agno_team:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
